<resources>
    <string name="app_name">CryptocurrencyRate</string>
    <string name="rank">rank</string>
    <string name="symbol">symbol</string>
    <string name="name">name</string>
    <string name="priceusd">priceUSD</string>
    <string name="changeprice24h">changePrice24H</string>
    <string name="title_activity_cryptocurrency">Cryptocurrency</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="_777">777</string>
    <string name="_100">100|</string>
    <string name="_1d">График изменения курса с интервалом 1d</string>
</resources>